--- a/src/main/resources/templates/userAccount.html
+++ b/src/main/resources/templates/userAccount.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avtalskunder</title>
+    <title>Användarhantering</title>
     <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -21,7 +20,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBookings" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBookings" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Bokningshantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
@@ -31,7 +31,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCustomer" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCustomer" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Kundhantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
@@ -39,17 +40,20 @@
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
                     </div>
                 <li class="nav-item dropdown" sec:authorize="hasAnyAuthority('admin')">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Admin
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin" >
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
                         <a class="dropdown-item" href="/admin/templates">Alla mallar</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                         <a class="dropdown-item" href="/user">User admin</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUser" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="${#authentication.name}">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUser" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                       th:text="${#authentication.name}">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownUser">
                         <a class="dropdown-item" href="/logout">Logga ut</a>
@@ -63,54 +67,48 @@
     </nav>
 </div>
 <div class="container mt-4">
-    <div th:unless="${user}">
-
-        <h1 class="text-center mb-5 mt-5"> Sök användare</h1>
-
-        <form action="/user/search" method="post" class="d-flex flex-row justify-content-center mb-3">
-            <div class="mr-2">
-                <label for="search" class="visually-hidden" style="display: none"></label>
-                <input type="text" id="search" name="search" th:value="${search}" class="form-control">
-            </div>
-            <div class="mr-2">
-                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
-            <div class="d-flex flex-row justify-content-center mb-3">
-                <a th:href="@{/user/create}" class="btn btn-success">Skapa ny</a>
-            </div>
-        </form>
-    </div>
+    <h1 class="text-center mb-5 mt-5">Sök användare</h1>
+    <form action="/user/search" method="post" class="d-flex flex-row justify-content-center mb-3">
+        <div class="mr-2">
+            <label for="search" class="visually-hidden" style="display: none"></label>
+            <input type="text" id="search" name="search" th:value="${search}" class="form-control">
+        </div>
+        <div class="mr-2">
+            <button type="submit" class="btn btn-primary"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div class="d-flex flex-row justify-content-center mb-3">
+            <a th:href="@{/user/create}" class="btn btn-success">Skapa ny</a>
+        </div>
+    </form>
     <div th:if="${hasSearched}">
         <div th:if="${userExists}">
-
-            <h1 class="text-center mb-5 mt-5"> Ändra användare</h1>
-
+            <h1 class="text-center mb-5 mt-5">Ändra användare</h1>
             <form action="/user/update" method="post">
                 <input type="hidden" name="id" th:value="${user.getId()}">
                 <div class="form-group">
                     <label for="username">Användarnamn:</label>
-                    <input type="text" class="form-control" id="username" name="username"
-                           th:value="${user.getUsername()}">
+                    <input type="text" class="form-control" id="username" name="username" th:value="${user.getUsername()}">
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="d-flex ">
+                    <div class="d-flex mr-2">
                         <label for="admin">Admin:</label>
                         <input type="checkbox" id="admin" name="admin" th:checked="${user.isAdmin()}">
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex ml-2">
                         <label for="receptionist">Receptionist:</label>
-                        <input type="checkbox" id="receptionist" name="receptionist"
-                               th:checked="${user.isReceptionist()}">
+                        <input type="checkbox" id="receptionist" name="receptionist" th:checked="${user.isReceptionist()}">
                     </div>
                 </div>
-
                 <button type="submit" class="btn btn-primary">Ändra</button>
-                <a href="/user" class="btn btn-danger">Avbryt</a>
             </form>
         </div>
-        <div th:unless="${userExists}">
-            <div class="alert alert-warning text-center" role="alert" th:text="${message}"></div>
+        <div th:if="${!userExists}">
+            <div class="alert alert-warning" role="alert" th:text="${message}"></div>
+        </div>
+        <div th:if="${updated}" class="mt-4">
+            <div class="alert alert-success" role="alert" th:text="${message}"></div>
         </div>
     </div>
 </div>
 </body>
+</html>
